css variables assigned

--- a/src/scss/helpers/_fontcreator.scss
+++ b/src/scss/helpers/_fontcreator.scss
@@ -20,15 +20,15 @@
 	}
 }
 
-@include font (Montserrat, Black, 900);
-@include font (Montserrat, ExtraBold, 800);
-@include font (Montserrat, Bold, 700);
-@include font (Montserrat, SemiBold, 600);
-@include font (Montserrat, Medium, 500);
-@include font (Montserrat, Regular, 400);
-@include font (Montserrat, Light, 300);
-@include font (Montserrat, ExtraLight, 200);
-@include font (Montserrat, Thin, 100);
+@include font (Poppins, Black, 900);
+@include font (Poppins, ExtraBold, 800);
+@include font (Poppins, Bold, 700);
+@include font (Poppins, SemiBold, 600);
+@include font (Poppins, Medium, 500);
+@include font (Poppins, Regular, 400);
+@include font (Poppins, Light, 300);
+@include font (Poppins, ExtraLight, 200);
+@include font (Poppins, Thin, 100);
 
 //@include font (Montserrat, bold, 700);
 //@include fontit (Montserrat, black, 900) 
