--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -4,46 +4,60 @@
 
 
 // Site width - more at __containers.scss
-$wrapper-max: 2000px;
+$wrapper-max: 1600px;
 $wrapper-min: 320px;
 
 // Container width - more at __containers.scss
-$container-max-width: 1600px;
+$container-max-width: 1200px;
 $container-padding: 15px;
 
 // User Styles
 
 :root {
-    // text colors
+    // **
+    //** :root {
+    //**     --my-color-rgb: 255, 0, 0; 
+    //** }
 
-    --txt-dark-0: rgba(0, 0, 0, 1.0);
-    --txt-dark-146: rgba(146, 161, 165, 1.0);
-    // --txt-dark-102: rgba(102, 102, 102, 1.0);
-    // --txt-dark-224: rgba(224, 224, 224, 1.0);
-    // --txt-dark-234: rgba(234, 234, 234, 1.0);
-    --txt-dark-255: rgba(255, 255, 255, 1.0);
+    //** .text {
+    //**    color: rgba(var(--my-color-rgb), 0.5);
+    //** }
 
-    // Backgrounds and Details
 
-    --bg-0: rgba(255, 255, 255, 1.0);
-    --bg-header-grey: rgba(239, 242, 246, 1.0);
-    --bg-header-red: rgba(255, 52, 61, 1.0);
-    
+    // colors
 
-    --dtl-red: rgba(255, 52, 61, 1.0);
-    --dtl-green: rgba(49, 143, 118, 1.0);
-    --dtl-grey: rgba(239, 242, 246, 1.0);
-    --dtl-black: rgba(0, 0, 0, 1.0);
-    --dtl-white: rgba(255, 255, 255, 1.0);
+    --black-0: rgb(0, 0, 0);
+    --black-24: rgb(24, 24, 24);
+    --black-48: rgb(48, 48, 48);
+    --black-98: rgb(98, 98, 98);
+    --black-109: rgb(109, 109, 109);
+    --cyan: rgb(89, 155, 167);
+    --dark-brown: rgb(53, 43, 48);
+    --gold: rgb(255, 206, 118);
+    --green: rgb(116, 157, 38);
+    --grey: rgb(45, 58, 75);
+    --red: rgb(255, 65, 45);
+    --white-249: rgb(249, 250, 252);
+    --white-250: rgb(250, 250, 250);
+    --white-255: rgb(255, 255, 255);
+
+    --accent: var(--gold);
+
+    --bg-dark: var(--white-249);
+    --bg-dark: var(--black-24);
+
+    --text-white: var(--white-255);
+    --text-gold: var(--gold);
+    --text-blac: var(--black-24);
 
     // Fonts
 
-    --ff-main: "Montserrat";
+    --ff-main: "Poppins";
 
     // Gaps, Margins and Paddings
-   
+
     // ** padding-bottom: calc(var(--gap-v) * 2.5);
-    
+
     // ~ vertical padding
     // --gap-v: clamp(1.3rem, 0.645rem + 3.27vw, 3.1rem);
     --gap-v: clamp(1.3rem, 0.645rem + 3.27vw, 3.1rem);
